--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "ConnectionString": "Server=localhost\\SQLEXPRESS01;Database=restaurante;TrustServerCertificate=True;Encrypt=False;Integrated Security=True"
+  }
 }
