Iniciando autenticação por jwt

--- a/appsettings.json
+++ b/appsettings.json
@@ -5,6 +5,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Secret": "gdsaf677fdsgsfd454fdgdf6754dxfg54sfd34erhgf453s",
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "ConnectionString": "Server=localhost\\SQLEXPRESS01;Database=restaurante;TrustServerCertificate=True;Encrypt=False;Integrated Security=True"
