--- a/appsettings.json
+++ b/appsettings.json
@@ -1,13 +1,16 @@
 {
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "ConnectionString": "Server=localhost\\SQLEXPRESS01;Database=restaurante;TrustServerCertificate=True;Encrypt=False;Integrated Security=True"
+  },
+  "AppSettings": {
+    "Token": "gdsaf677fdsgsfd454fdgdf6754dxfg54sfd34erhgf453s"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  },
-  "Secret": "gdsaf677fdsgsfd454fdgdf6754dxfg54sfd34erhgf453s",
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "ConnectionString": "Server=localhost\\SQLEXPRESS01;Database=restaurante;TrustServerCertificate=True;Encrypt=False;Integrated Security=True"
   }
 }
+
